--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header {
 }
 
 .pembungkus-pelajaran {
-  background-color: #b1b1b1;
+  background-color: #215a47;
   padding-bottom: 80px;
   text-align: center;
 }
@@ -153,7 +153,7 @@ header {
 }
 
 .message {
-  background-color: #ca5db2;
+  background-color: #0000;
   padding: 15px 40px;
 }
 
